<resources>
    <string name="app_name">FormulaOne</string>
    <string name="no_internet">No internet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">This application provides up-to-date information about Formula 1 racing, including latest news and race results. Stay informed and never miss a moment of the action!</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="really">Really exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="race">Race</string>
    <string name="drivers">Drivers</string>
    <string name="settings">Settings</string>
    <string name="select_year">Select Year:</string>
    <string name="year_spinner">Year:</string>
    <string name="race_caps">RACE</string>
    <string name="date_preview">May 23, 2026</string>
    <string name="monaco_circuit_de_monaco">Monaco • Circuit de Monaco</string>
    <string name="monaco_grand_prix">Monaco Grand Prix</string>
    <string name="driver_headshot">Driver headshot</string>
    <string name="team_icon">Team icon</string>
    <string name="no_drivers_found">No drivers found</string>
    <string name="year">year</string>

    <!-- Settings Screen -->
    <string name="language">Language</string>
    <string name="select_language">Choose your preferred language</string>
    <string name="english">English</string>
    <string name="croatian">Croatian (Hrvatski)</string>

    <string name="theme">Theme</string>
    <string name="select_theme">Choose your preferred theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="app_info">App Information</string>
    <string name="version">Version 1.0.0</string>
    <string name="apply">apply</string>
    <string name="settings_applied">settings applied</string>
    <string name="show_results">show results</string>
    <string name="starting_grid">Starting grid</string>
    <string name="circuit_info">circuit_info</string>
    <string name="no_data_available">no data available</string>
</resources>