<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuRace"
    android:id="@+id/fragments">

    <fragment
        tools:layout="@layout/fragment_races"
        android:id="@+id/menuRace"
        android:name="hr.bmestric.formulaone.ui.fragment.RaceFragment"
        android:label="@string/race">

        <action
            android:id="@+id/action_menuRace_to_raceInfoFragment"
            app:destination="@id/raceInfoFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        tools:layout="@layout/fragment_about"
        android:id="@+id/menuAbout"
        android:name="hr.bmestric.formulaone.ui.fragment.AboutFragment"
        android:label="@string/about" />

    <fragment
        tools:layout="@layout/fragment_drivers"
        android:id="@+id/menuDrivers"
        android:name="hr.bmestric.formulaone.ui.fragment.DriverFragment"
        android:label="@string/drivers" />

    <fragment
        tools:layout="@layout/fragment_settings"
        android:id="@+id/menuSettings"
        android:name="hr.bmestric.formulaone.ui.fragment.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/raceInfoFragment"
        android:name="hr.bmestric.formulaone.ui.fragment.RaceInfoFragment"
        android:label="Race Details"
        tools:layout="@layout/fragment_race_info" />

</navigation>